src/test/deca/context/invalid/homemade/duplicate_variable.deca
// trying to define a variable twice

{
    int x;
    float x;
}